[gd_scene load_steps=18 format=3 uid="uid://dpveqnitfylgn"]

[ext_resource type="PackedScene" uid="uid://dwyhak12pdjyv" path="res://ui/menus/tree_menu/tree_menu.tscn" id="1_bb7ga"]
[ext_resource type="Script" uid="uid://dhqoiddma2o7m" path="res://ui/menus/menu.gd" id="1_bq8en"]
[ext_resource type="Texture2D" uid="uid://d3vjgwi8co80j" path="res://ui/menus/menu_button_unselected_2x.png" id="2_6r7ym"]
[ext_resource type="PackedScene" uid="uid://dnqphbl5e44tn" path="res://ui/menus/tech_menu.tscn" id="2_v5h4j"]
[ext_resource type="Texture2D" uid="uid://cp6u4ys1uoqt1" path="res://ui/menus/menu_button_selected_2x.png" id="3_maj2m"]
[ext_resource type="FontFile" uid="uid://cc6r2ujntj8np" path="res://ui/fonts/Angel Code Format (v1.2)/Sol Schori (White/Sol Schori (White).fnt" id="4_5ai1f"]
[ext_resource type="Texture2D" uid="uid://cwhdt4oefoyib" path="res://ui/menus/menu_exit_button.png" id="7_maj2m"]

[sub_resource type="ButtonGroup" id="ButtonGroup_maj2m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_maj2m"]
atlas = ExtResource("2_6r7ym")
region = Rect2(48, 96, 160, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwjwq"]
atlas = ExtResource("3_maj2m")
region = Rect2(48, 96, 160, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ai1f"]
atlas = ExtResource("2_6r7ym")
region = Rect2(48, 96, 160, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_6364y"]
atlas = ExtResource("3_maj2m")
region = Rect2(48, 96, 160, 34)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ai1f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d7jds"]
atlas = ExtResource("7_maj2m")
region = Rect2(48, 48, 32, 16)

[sub_resource type="Animation" id="Animation_mrn3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 696)]
}

[sub_resource type="Animation" id="Animation_hyvv2"]
resource_name = "menu_appear"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 696), Vector2(0, 396)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mrn3s"]
_data = {
&"RESET": SubResource("Animation_mrn3s"),
&"menu_appear": SubResource("Animation_hyvv2")
}

[node name="Menu" type="Control" node_paths=PackedStringArray("tree_menu", "tech_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 696.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bq8en")
tree_menu = NodePath("TreeMenu")
tech_menu = NodePath("TechMenu")

[node name="MenuButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = -77.81
offset_right = 487.0
offset_bottom = -43.81
theme_override_constants/separation = 0

[node name="Trees" type="TextureButton" parent="MenuButtons"]
layout_mode = 2
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_maj2m")
texture_normal = SubResource("AtlasTexture_maj2m")
texture_hover = SubResource("AtlasTexture_wwjwq")

[node name="Label" type="Label" parent="MenuButtons/Trees"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -14.19
offset_right = 30.0
offset_bottom = 37.81
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5ai1f")
theme_override_font_sizes/font_size = 64
text = "Trees"
vertical_alignment = 1

[node name="Technology" type="TextureButton" parent="MenuButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_maj2m")
texture_normal = SubResource("AtlasTexture_5ai1f")
texture_hover = SubResource("AtlasTexture_6364y")

[node name="Label" type="Label" parent="MenuButtons/Technology"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -14.19
offset_right = -25.0
offset_bottom = 37.81
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5ai1f")
theme_override_font_sizes/font_size = 64
text = "Tech"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TreeMenu" parent="." instance=ExtResource("1_bb7ga")]
offset_top = -48.0
offset_bottom = -48.0

[node name="TechMenu" parent="." instance=ExtResource("2_v5h4j")]
visible = false
offset_top = -48.0
offset_bottom = -48.0

[node name="CloseMenu" type="Button" parent="."]
layout_mode = 2
offset_left = 680.0
offset_top = -81.0
offset_right = 748.0
offset_bottom = -47.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ai1f")
toggle_mode = true
button_group = SubResource("ButtonGroup_maj2m")

[node name="TextureRect" type="TextureRect" parent="CloseMenu"]
layout_mode = 0
offset_top = -1.0
offset_right = 72.0
offset_bottom = 36.0
mouse_filter = 2
texture = SubResource("AtlasTexture_d7jds")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mrn3s")
}

[connection signal="pressed" from="MenuButtons/Trees" to="." method="_on_trees_pressed"]
[connection signal="pressed" from="MenuButtons/Technology" to="." method="_on_technology_pressed"]
[connection signal="pressed" from="CloseMenu" to="." method="_on_close_menu_pressed"]
